Update requirements and add ACF model

--- a/factored_rl/experiments/conf/model/cnn_relu.yaml
+++ b/factored_rl/experiments/conf/model/cnn_relu.yaml
@@ -7,18 +7,13 @@ arch:
 lib: factored_rl
 flatten_input: false
 cnn:
-  activation:
-    - _target_: torch.nn.ReLU
-  final_activation:
-    - _target_: torch.nn.ReLU
+  activation: relu
+  final_activation: relu
 mlp:
-  activation:
-    - _target_: torch.nn.ReLU
-  final_activation:
-    - _target_: torch.nn.Tanh
+  activation: relu
+  final_activation: tanh
 qnet:
   n_hidden_layers: 1
   n_units_per_layer: 64
-  activation:
-    - _target_: torch.nn.ReLU
-  final_activation: null
+  activation: relu
+  final_activation: ""
