--- a/factored_rl/experiments/conf/model/baselines/cnn_curl_84.yaml
+++ b/factored_rl/experiments/conf/model/baselines/cnn_curl_84.yaml
@@ -11,6 +11,6 @@ mlp:
   n_hidden_layers: 1
   n_units_per_layer: 1024
   final_activation:
-    - {_target_: torch.nn.LayerNorm, _partial_: true}
-    - _target_: torch.nn.Tanh
+    - layernorm
+    - tanh
 n_latent_dims: ??? # 50
