--- a/requirements.txt
+++ b/requirements.txt
@@ -1,196 +1,75 @@
-absl-py==1.2.0
-aiohttp==3.8.1
-aiosignal==1.2.0
-alembic==1.8.1
+absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.8
+aiosignal==1.3.1
+alembic==1.13.3
 antlr4-python3-runtime==4.9.3
-appnope==0.1.0
-argon2-cffi==20.1.0
-async-generator==1.10
-async-timeout==4.0.2
-attrs==22.1.0
-autopage==0.5.1
-backcall==0.2.0
-bleach==3.2.1
-cached-property==1.5.2
-cachetools==5.2.0
-cachier==1.5.4
-certifi==2022.6.15
-cffi==1.14.3
-chardet==3.0.4
-charset-normalizer==2.1.0
-click==8.0.4
-cliff==4.1.0
-cloudpickle==2.1.0
-cmaes==0.9.0
-cmd2==2.4.2
-colorama==0.4.5
-colorlog==6.6.0
-coverage==6.4.2
-cycler==0.11.0
-Cython==0.29.21
-dataclasses==0.6
-decorator==4.4.2
-defusedxml==0.6.0
-distlib==0.3.5
-dm-control==0.0.322773188
-dm-env==1.3
-dm-tree==0.1.7
-docker-pycreds==0.4.0
-EasyProcess==0.3
-entrypoints==0.3
-fasteners==0.15
-filelock==3.7.1
-fonttools==4.34.4
-frozenlist==1.3.1
-fsspec==2022.7.1
-future==0.18.2
-gitdb==4.0.9
-GitPython==3.1.27
-glfw==2.0.0
-gmpy==1.17
-google-auth==2.9.1
-google-auth-oauthlib==0.4.6
-graphviz==0.14.1
-greenlet==2.0.1
-grpcio==1.43.0
-gym==0.26.0
+attrs==24.2.0
+cloudpickle==3.0.0
+colorlog==6.8.2
+contourpy==1.3.0
+cycler==0.12.1
+-e git+ssh://git@github.com/camall3n/disent.git@02ffac280158a49bc5c0adb46c5a1b0db8d34749#egg=disent&subdirectory=../../disent
+Farama-Notifications==0.0.4
+filelock==3.16.1
+fonttools==4.54.1
+frozenlist==1.4.1
+fsspec==2024.9.0
+future==1.0.0
+grpcio==1.66.2
+gym==0.26.2
 gym-notices==0.0.8
-h5py==3.7.0
-hydra-colorlog==1.1.0
-hydra-core==1.2.0
-hydra-submitit-launcher==1.1.6
-idna==3.3
-imageio==2.21.0
-imageio-ffmpeg==0.4.7
-importlib-metadata==4.12.0
-iniconfig==1.1.1
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.2
-Jinja2==2.11.2
-joblib==1.1.0
-jsonschema==4.9.1
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-core==4.6.3
-jupyterlab-pygments==0.1.2
-kiwisolver==1.4.4
-labmaze==1.0.3
-llvmlite==0.39.0
-lxml==4.6.2
-Mako==1.2.4
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-mistune==0.8.4
-monotonic==1.5
-moviepy==1.0.3
-msgpack==1.0.4
-multidict==6.0.2
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.1
-notebook==6.1.4
-numba==0.56.0
-numpy==1.22.4
-oauthlib==3.2.0
-omegaconf==2.2.3
-onager==0.1.3
-opencv-python==4.4.0.46
-optuna @ git+https://github.com/optuna/optuna.git@e310dadcf8f91b57a379d925cbfe445068a9f3aa
-packaging==21.3
-pandas==1.4.3
-pandocfilters==1.4.2
-parso==0.7.1
-pathtools==0.1.2
-patsy==0.5.2
-pbr==5.11.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-platformdirs==2.5.2
-pluggy==1.0.0
-portalocker==2.5.1
-prettytable==3.5.0
-proglog==0.1.10
-prometheus-client==0.8.0
-promise==2.3
-prompt-toolkit==3.0.8
-protobuf==3.19.4
-psutil==5.9.1
-ptyprocess==0.6.0
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pyDeprecate==0.3.2
-pyglet==1.5.0
-Pygments==2.7.1
-PyOpenGL==3.1.5
-PyOpenGL-accelerate==3.1.5
-pyparsing==3.0.9
-pyperclip==1.8.2
-pyrsistent==0.18.1
-pytest==7.1.3
-python-dateutil==2.8.2
-pytorch-lightning==1.6.5
+h5py==3.12.1
+hydra-core==1.3.2
+idna==3.10
+imageio==2.35.1
+importlib_metadata==8.5.0
+iniconfig==2.0.0
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.7
+lightning-utilities==0.11.7
+Mako==1.3.5
+Markdown==3.7
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mpmath==1.3.0
+multidict==6.1.0
+networkx==3.3
+numpy==1.26.0
+omegaconf==2.3.0
+opencv-python==4.10.0.84
+optuna==4.0.0
+packaging==24.1
+pillow==10.4.0
+platformdirs==4.3.6
+pluggy==1.5.0
+protobuf==5.28.2
+pyDeprecate==0.3.1
+pyparsing==3.1.4
+pytest==8.3.3
+python-dateutil==2.9.0.post0
+pytorch-lightning==1.5.3
 pytorch-ranger==0.1.1
-pytz==2022.1
-PyYAML==6.0
-pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
-ray==1.13.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.9
-ruck==0.2.4
-scikit-learn==1.1.1
-scipy==1.8.1
-seaborn==0.11.2
-seeding==0.1.0
-Send2Trash==1.5.0
-sentry-sdk==1.9.0
-setproctitle==1.3.0
-shortuuid==1.0.9
-shtab==1.5.5
+PyYAML==6.0.2
+scikit-learn==1.5.2
+scipy==1.14.1
+setuptools==75.1.0
 six==1.16.0
-smmap==5.0.0
-SQLAlchemy==1.4.44
-statsmodels==0.13.2
-stevedore==4.1.1
-submitit==1.4.5
-tabulate==0.8.10
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==3.1.0
-tldr==3.1.0
-tomli==2.0.1
-torch==1.12.0+cu113
+SQLAlchemy==2.0.35
+sympy==1.13.3
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+threadpoolctl==3.5.0
+tomli==2.0.2
+torch==2.4.1
 torch-optimizer==0.3.0
-torchmetrics==0.9.3
-torchvision==0.13.0+cu113
-tornado==6.0.4
-tqdm==4.64.0
-traitlets==5.0.5
-typing_extensions==4.3.0
-urllib3==1.26.11
-virtualenv==20.16.3
-wandb==0.13.0
-watchdog==2.1.9
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.2.1
-widgetsnbextension==3.5.1
-xvfbwrapper==0.2.9
-yapf==0.31.0
-yarl==1.8.1
-zipp==3.8.1
+torchmetrics==1.4.2
+torchvision==0.19.1
+tqdm==4.66.5
+typing_extensions==4.12.2
+-e git+ssh://git@github.com/camall3n/visgrid.git@ec728527f9301594e5e6f05cfb88a1cd8af10de2#egg=visgrid
+Werkzeug==3.0.4
+yapf==0.40.2
+yarl==1.13.1
+zipp==3.20.2
